# goldenpay

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: batch_send.rs  bot_features.rs  poll_orders.rs
go/goldenpay/: bot.go  client.go  config.go  crypto.go  error.go  go.mod  goldenpay.go  models.go  parser.go  scheduler.go  storage.go  urls.go  webhook.go
src/: automation.rs  bot.rs  client.rs  config.rs  crypto.rs  error.rs  event.rs  lib.rs  models.rs  offer.rs  parser.rs  scheduler.rs  security.rs  session.rs  storage.rs  urls.rs  webhook.rs
