[package]
name = "goldenpay"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Production-oriented Rust SDK for FunPay automation"
license = "MIT"
repository = "https://github.com/FUXKVOB/goldenpay"
homepage = "https://github.com/FUXKVOB/goldenpay"
documentation = "https://docs.rs/goldenpay"
readme = "README.md"
keywords = ["funpay", "sdk", "automation", "bot"]
categories = ["api-bindings", "web-programming::http-client"]
include = ["src/**", "tests/**", "examples/**", "README.md", "LICENSE", "CHANGELOG.md"]

[dependencies]
async-trait = "0.1.89"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "json", "cookies", "charset", "http2"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "sync", "time", "rt"] }
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
