[package]
name = "goldenpay"
version = "1.1.0"
edition = "2024"
rust-version = "1.97"
description = "Production-oriented Rust SDK for FunPay automation"
license = "MIT"
repository = "https://github.com/rxzsu/goldenpay"
homepage = "https://github.com/rxzsu/goldenpay"
documentation = "https://docs.rs/goldenpay"
readme = "README.md"
keywords = ["funpay", "sdk", "automation", "bot"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = ["/landing", "/data", "/target", "/.idea", "/.vscode", "*.log"]

[dependencies]
async-trait = "0.1.89"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "json", "cookies", "charset", "http2", "multipart"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "sync", "time", "rt", "macros", "signal", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
urlencoding = "2.1.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
sha2 = "0.10"



[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
