[package]
name = "goldenpay"
version = "1.1.0"
edition = "2024"
rust-version = "1.97"
description = "Production-oriented Rust SDK for FunPay automation"
license = "MIT"
repository = "https://github.com/rxzsu/goldenpay"
homepage = "https://github.com/rxzsu/goldenpay"
documentation = "https://docs.rs/goldenpay"
readme = "README.md"
keywords = ["funpay", "sdk", "automation", "bot"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = ["/landing", "/data", "/target", "/.idea", "/.vscode", "*.log"]

[dependencies]
async-trait = "0.1.91"
rand = "0.10.2"
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "json", "cookies", "charset", "http2", "multipart"] }
scraper = "0.27.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["fs", "sync", "time", "rt", "macros", "signal", "io-util", "net"] }
tokio-util = { version = "0.7.19", features = ["rt"] }
tracing = "0.1.44"
urlencoding = "2.1.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
hmac = "0.13.0"
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
